Update ci workflow

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,6 +11,8 @@ permissions:
 
 jobs:
   check-code-quality:
+    if: github.event.before != '0000000000000000000000000000000000000000'
+
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository with submodules
