--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,9 @@
 name: CI
 
 on:
+  push:
+    branches:
+      - main
   pull_request:
     branches:
       - main
@@ -11,6 +14,8 @@ permissions:
 
 jobs:
   check-code-quality:
+    if: github.event.before != '0000000000000000000000000000000000000000'
+
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository with submodules
@@ -36,6 +41,8 @@ jobs:
           uv run ty check .
 
   validate-commits:
+    if: github.event.before != '0000000000000000000000000000000000000000'
+
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository with history
